# lxi_gui

./: .gitignore  README.md  cspell.json  luigi.cfg  pyproject.toml  requirements.txt
codes/: .lxi_gui_plot_routines.py.swp  all_data_v2.csv  bokeh_example.py  bokeh_hist_test.py  channel_comparisons.py  data_details.py  discussion_empty_files.md  firefly_ssh_key_ssh  global_variables.py  gpt_test_code.py  lexi_online_file_storage_structure.md  load_plot_routines.py  luigi.cfg  lxi_csv_to_cdf.py  lxi_csv_to_csv.py  lxi_data_read_funcs.py  lxi_file_read_funcs.py  lxi_gui.py  lxi_gui.sh  lxi_gui_config.py  lxi_gui_entry_box.py  lxi_gui_plot_routines.py  lxi_gui_plot_routines_v00.py  lxi_gui_v01.py  lxi_hist_test.py  lxi_lin_correction.py  lxi_load_plot_routines.py  lxi_misc_codes.py  lxi_read_binary_files.py  lxi_read_files.py  lxi_save_figures.py  lxi_ts_plots.py  make_file.txt  non_lin_corr.py  plot_various_data.py  read_all_files.py  read_and_plot_pinpuller.py  read_hv_files.py  read_lxi_sim_data.py  read_multiple_files.py  (+6 more)
codes/idl/: .xray_002.pro.swp  xray_002.pro
data/raw_data/: 2022_03_03_1030_LEXI_raw_2100_newMCP_copper.txt  2022_07_25_1647_LEXI_raw_at_tbh_settings.txt
flowchart/: lexi-flowchart.drawio  lexi-flowchart.drawio_v00_20220328.drawio
git_data/: 2022_04_29_0900_LEXI_rawunit1_mcp_unit1_eBox_1800V_sci_output.csv  2022_07_29_1453_LEXI_raw_starting hot cycle_settings_HV_on_temp_zeroC.txt
processed_data/hk/: sample_binary_dataset_hk_output.csv  sample_binary_dataset_mcp_hk_output.csv
processed_data/sci/: sample_binary_dataset_sci_output.csv
(+48 files in other folders)
