[tool.poetry]
name = "LEXI-GUI"
version = "0.2.0"
description = "GUI for LEXI data visualization"
authors = ["Ramiz A. Qudsi <qudsira@bu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
seaborn = "^0.11.2"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
